# lain-day

./:  .env.bak  .geminiignore  .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES.md  DESIGN_GOALS.md  GEMINI.md  PROLOGUE_TODO.md  README.md  SSL_TEMPLATE_REFERENCE.ssl  actions.json  character.json  check_user.sh  debug_build.sh  ffplay_7.1.1-2_aarch64.deb  game  game.py  game_script.md  items.json  old_README.md  release_build.sh  room.txt  test_char.json  world_map.json  序章大纲.txt  显示.txt
character_settings/: chisa_yomoda.md
cmake/: generate_json_header.cmake  generate_string_ids.py  parse_scenes.py
data/: character.json  items.json  strings.json
data/scenes/: 00_entry.ssl  00_negotiation.ssl  00a_wait_one_minute_endprologue.ssl  01_lain_room.ssl  01_lain_room_broken.ssl  01a_examine_navi.ssl  01b_navi_shutdown.ssl  01e_navi_connect_endprologue.ssl  02_downstairs.ssl  02a_talk_to_dad.ssl  02b_dad_reply_no.ssl  02c_dad_ask_help.ssl  02d_talk_to_mom_normal.ssl  02g_mom_reply_silent_endprologue.ssl  02j_get_milk_endprologue.ssl  04a_talk_to_sister_cold.ssl  04b_talk_to_sister_curious.ssl  04c_talk_to_sister_default.ssl  cyberia_club.ssl  dad_hub.ssl  examine_bookshelf.ssl  examine_doorbell.ssl  examine_fridge.ssl  examine_mika_wardrobe.ssl  examine_shoe_rack.ssl  ikebukuro.ssl  iwakura_bathroom.ssl  iwakura_front_yard.ssl  iwakura_lains_room.ssl  iwakura_living_dining_kitchen.ssl  iwakura_mikas_room.ssl  iwakura_study.ssl  iwakura_upper_hallway.ssl  komagome.ssl  meguro.ssl  mika_room_locked.ssl  mika_room_unlocked.ssl  miyanosaka_park.ssl  miyanosaka_station.ssl  miyanosaka_street.ssl  (+18 more)
data/story/: 04_talk_to_sister.md  04b_talk_to_sister_curious.md  06z_train_event_result.md  08b_ask_teacher.md  08d_ask_chisa.md  10a_go_with_alice.md  10c_alone_chisa.md  21a_hug_alice.md  21b_reply_fine.md  22_cyberia_flashback.md  ch2_ask_who.md  ch2_boss_dismisses_lain.md  ch2_lain_asks_about_computer.md  cyberia_boss_mika_response.md
data/strings_extra/: character_scenes.json  custom_strings.json  dad_interactions.json  extracted_descriptions.json  generated_placeholders.json  items_interactions.json  iwakura_house_locations.json  locations_miyasaka.json  locations_parks.json  locations_roppongi.json  locations_shibuya.json  locations_shibuya_street.json  locations_shinjuku.json  locations_shinjuku_extra.json  locations_train.json  mika_room_interactions.json  pc_navi_strings.json  shops.json  strings1.json  strings_map.json  strings_navi.json  strings_scenes_chapter1.json  strings_scenes_downstairs.json  strings_scenes_prologue.json  strings_system.json
docs/design/: LINENOISE_MOUSE_PROPOSAL.md  RESPONSE_TO_AUDIT.md  TIME_COST_DESIGN.md  要求.md
engine/: game_logic.py  parser.py  renderer.py  terminal.py
experiments/ansi_renderer/: convert.py  e.jpeg.txt  gen_embedded_viewer_v2.py  gen_embedded_viewer_v3.py  gen_embedded_viewer_v4.py  image.raw  img_to_ansi.py  lain_view  lain_view.c  lain_view_blue  lain_view_blue.c  render_batch.c  view_image  view_image.c  view_image_v2  view_image_v2.c  viewer_template.c
include/: ansi_colors.h  build_info.h.in  cmap.h  compression_util.h  conditions.h  data_loader.h  ecc_time.h  event_system.h  executor.h  flag_system.h  game_paths.h  game_types.h  logger.h  logo_data.h  map_loader.h  project_status.h  render_utils.h  scenes.h  story_parser.h  string_ids.h  string_table.h  time_utils.h
include/characters/: mika.h
include/systems/: boot_system.h  embedded_navi.h  image_view_system.h  mail_system.h  mystery_system.h  navi_alpha.h  navi_mini.h  navi_pro.h  navi_shell.h  train_system.h
lore/: chisa_persona_C_conformist.md  chisa_yomoda.md  game_time_design.md  lain_identity_concept.md
lore/chisa_background/: 01_kafka_core.md  03_no_name_root.md  05_visual_symbols.md
map/alice_home/: name.txt
map/chisa_home/: description.txt
map/cyberia_club/: description.txt  poi.json
map/lain_room/: poi.json
map/mira_fuyuko_home/: name.txt
map/school_classroom/: description.txt
map/shibuya_street/: connections.json
old_map/alice_home/: description.txt
old_map/arcade/: name.txt
old_map/chisa_home/: description.txt  name.txt  poi.json
old_map/convenience_store/: description.txt
old_map/cyberia_club/: name.txt
old_map/entry/: connections.json  name.txt
old_map/kurani_residence/: connections.json  name.txt
old_map/lain_room/: connections.json
old_map/school_classroom/: name.txt  poi.json
old_map/shibuya_street/: description.txt  name.txt
scripts/: debug_build.sh  release_build.sh
sequences/: station_coordinates.json
src/: cmap.c  compression_util.c  conditions.c  data_loader.c  ecc_time.c  event_system.c  executor.c  flag_system.c  game_paths.c  game_state_global.c  logger.c  main.c  map_loader.c  render_utils.c  scenes.c  story_parser.c  string_table.c  time_utils.c
story/: 00_entry.md  00a_wait_one_minute_endprologue.md  01_lain_room.md  01a_examine_navi.md  01b_navi_shutdown.md  01c_talk_to_figure_endprologue.md  01d_navi_reboot_endprologue.md  01e_navi_connect_endprologue.md  02_downstairs.md  02a_talk_to_dad.md  02b_dad_reply_no.md  02c_dad_ask_help.md  02f_mom_reply_fine_endprologue.md  02g_mom_reply_silent_endprologue.md  02h_mom_deny_vision_endprologue.md  02i_mom_agree_doctor_endprologue.md  02j_get_milk_endprologue.md  02k_mom_silent_vision_endprologue.md  03_chapter_one_intro.md  04_talk_to_sister.md  05_chisa_email.md  06_train_scene.md  07_classroom.md  08a_reply_fine.md  08e_ask_alice_scared.md  09a_persuasion.md  20_chapter_two_intro.md  alice_asks_about_forum.md  ch2_lain_asks_if_alice_hates_boss.md  gunshot_advance.md  singing_result_gunshot.md  singing_result_gunshot.md.bak  time_glitch.md  todo_alice_asks_about_lain_and_boss.md  todo_ch2_hug_alice_continue.md
tests/: test_ncurses.c
tools/: analyze_map_connectivity.py  boot_debugger.c  check_consistency.py  create_missing_ssl.py  debug_mika_schedule.c  fix_missing_strings.py  generate_logo_header.py  image_converter.py  image_to_header.py  map_debugger.c  migrate_scenes.py  navi_debugger.c  scene_debugger.c  term_probe.c
(+151 files in other folders)
